# FCGAA-Stats

./: .env.example  .gitignore  HOSTINGER_DEPLOY.md  Lance_Deploiement_GitHUB.ps1  README.md  docker-compose.yml  index.html  interface-fcgaa-stats.html  package-lock.json  package.json  render.yaml  serve-interface.mjs
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/routes/: ai.py  exports.py  imports.py  referentials.py  statistics.py
backend/app/core/: config.py
backend/app/db/: models.py
docs/conception/: DOSSIER_CONCEPTION_FCGAA_STATS.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AppShell.tsx  MetricCard.tsx  StatusPill.tsx
frontend/src/lib/: navigation.ts
scripts/: extract_pdf.py  extract_txt.py  index_project_documents.py  prepare_hostinger_zip.ps1  store_import.py
