[project]
name = "fcgaa-stats-backend"
version = "0.1.0"
description = "Backend FastAPI pour FCGAA Stats"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "sqlalchemy>=2.0.40",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.10.0",
  "python-multipart>=0.0.20",
  "pypdf>=6.0.0",
  "httpx>=0.28.0",
  "mistralai>=1.9.0",
  "passlib[bcrypt]>=1.7.4",
  "python-jose[cryptography]>=3.5.0",
]

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

